# orgIO

./: .gitignore  DEMO_SCRIPT.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  main.py  requirements.txt  setup.sh
backend/agents/: base_agent.py  brief_agent.py  generative_ui_agent.py  submission_agent.py  task_matching_agent.py
backend/config/: settings.py
backend/migrations/: 001_work_sessions.sql
backend/models/: schemas.py
backend/prompts/: brief_prompts.py  submission_prompts.py  task_matching_prompts.py  ui_generation_prompts.py
backend/routers/: auth.py  briefs.py  chat.py  desktop.py  submissions.py  users.py  webhooks.py
backend/services/: agent_manager.py  clerk_auth.py  supabase_client.py  websocket_manager.py
backend/utils/: helpers.py
docs/: API_SPEC.md  DRIFT.md  DRIFT_DESIGN.md  DRIFT_DEV.md  DRIFT_PRODUCT.md  GCP_SETUP.md
drift-app/: README.md  index.html  package-lock.json  package.json
drift-app/src/: App.tsx  index.css  (+1 more)
drift-app/src-tauri/: Cargo.toml  tauri.conf.json
drift-app/src-tauri/capabilities/: default.json
drift-app/src-tauri/src/: lib.rs  main.rs
drift-backend/: README.md  requirements.txt
drift-desktop/: README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json
drift-web/: .dockerignore  Dockerfile  deploy.sh  docker-compose.yml  index.html  nginx-ssl.conf  nginx.conf  package-lock.json  package.json  setup-ssl.sh
orgio-landing/: index.html  package-lock.json  package.json  tailwind.config.js
(+58 files in other folders)
